refactor(wms): authorize operations through direct contracts